--- a/src/pages/shop.astro
+++ b/src/pages/shop.astro
@@ -66,9 +66,8 @@ Astro.cookies.set("csrf_token",resp.headers.get("X-CSRF-TOKEN"),sessionCookieOpt
     shopAddressMap,
     signedIn,
     firstName,
-    title:'Jewellery',
+    title:'Shop Jewellery for Her',
     headerCarouselTexts,
-    titleAddForHer:true,
     description:'Beautiful jewellery from delicate to statement pieces. Mix and match any 3 for £20, plus free UK shipping on orders £20+. Stand out with our unique styles.'
 }}>
     <ShopContent productIDs={productIDs || []} productObj={productMap} cartItemObj={cartItemMap} />
