--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -56,7 +56,7 @@ Astro.cookies.set("csrf_token",resp.headers.get("X-CSRF-TOKEN"),sessionCookieOpt
     firstName,
     title:'Contact Us',
     headerCarouselTexts,
-    description:'Need help with your order? Contact our UK-based customer service team for support with your purchase. Fast response guaranteed on all inquiries.'
+    metaDescription:'Need help with your order? Contact our UK-based customer service team for support with your purchase. Fast response guaranteed on all inquiries.'
 }}>
     <ContactForm />
 </Layout>
