--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -73,7 +73,7 @@ Astro.cookies.set("csrf_token",resp.headers.get("X-CSRF-TOKEN"),sessionCookieOpt
     firstName,
     title:'',
     headerCarouselTexts,
-    description:"Discover beautiful, distinctive fashion jewellery at affordable prices. Buy 3 for £20 & free UK delivery over £20. Explore our unique collection today!",
+    metaDescription:"Discover beautiful, distinctive fashion jewellery at affordable prices. Buy 3 for £20 & free UK delivery over £20. Explore our unique collection today!",
     preloadImageFilename:'banner-2000x673',
     preloadImageExt:'.jpg',
 }}>
