--- a/src/pages/jewellery-care-guide.astro
+++ b/src/pages/jewellery-care-guide.astro
@@ -56,7 +56,7 @@ Astro.cookies.set("csrf_token",resp.headers.get("X-CSRF-TOKEN"),sessionCookieOpt
     firstName,
     title:'Jewellery Care Guide',
     headerCarouselTexts,
-    description:'Learn how to care for your jewellery to keep them looking beautiful. Essential tips for cleaning, storing, and maintaining your favorite pieces.'
+    metaDescription:'Learn how to care for your jewellery to keep them looking beautiful. Essential tips for cleaning, storing, and maintaining your favorite pieces.'
 }}>
     <Terms {...{text}} />
 </Layout>
