--- a/src/pages/product/[name]/[id].astro
+++ b/src/pages/product/[name]/[id].astro
@@ -84,7 +84,8 @@ if (!!productMap[id].images && !!productMap[id].images.length) {
     title:productName,
     isProductPage:true,
     headerCarouselTexts,
-    description:!!productMap[id].metaDescription ? productMap[id].metaDescription : productMap[id].description.replaceAll('<p>','').replaceAll('</p>','').trim(),
+    productDescription:productMap[id].description.replaceAll('<p>','').replaceAll('</p>','').trim(),
+    metaDescription:!!productMap[id].metaDescription ? productMap[id].metaDescription : productMap[id].description.replaceAll('<p>','').replaceAll('</p>','').trim(),
     imageURL:PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX+productMap[id].images[0].name+productMap[id].images[0].ext,
     images:productMap[id].images,
     price:productMap[id].discountedPrice,
