--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from '../components/layout/index.astro';
 import { httpRequestHeader, sessionCookieOption, type IMdwResponse, type IShoppingBagSidebarProp } from '@misc';
 import { FM_CLIENT_WEBSHOP_API_URL } from 'astro:env/server'
-import { FM_IS_ONLINE, PUBLIC_FM_HEADER_CAROUSEL_OFF_COOKIE_KEY } from 'astro:env/client'
+import { FM_IS_ONLINE, PUBLIC_FM_HEADER_CAROUSEL_OFF_COOKIE_KEY, PUBLIC_FM_COMPANY_NAME_SHORT, PUBLIC_FM_COMPANY_NAME_FULL } from 'astro:env/client'
 import Homepage from '@components/homepage/index.astro'
 import type { IProduct } from '@components/catalogue-item/interfaces';
 
@@ -61,6 +61,25 @@ const shoppingBagProp:IShoppingBagSidebarProp = {
 
 Astro.cookies.set("csrf_token",resp.headers.get("X-CSRF-TOKEN"),sessionCookieOption(isOnline))
 
+const organizationalSchema = {
+  "@context": "https://schema.org",
+  "@type": "OnlineStore",
+  "name": PUBLIC_FM_COMPANY_NAME_SHORT,
+  "legalName":PUBLIC_FM_COMPANY_NAME_FULL,
+  "url": origin,
+  "logo": `${origin}/logo.jpg`,
+  "description":"Based in Edinburgh, we offer beautiful, distinctive fashion jewellery at affordable prices.",
+  "contactPoint": {
+    "@type": "ContactPoint",
+    "contactType": "Customer Service",
+    "url": `${origin}/contact`, 
+    "availableLanguage": ["English"]
+  },
+  "sameAs": [
+    "https://pinterest.com/fairymade_edi/"
+  ]
+}
+
 ---
 
 <Layout {...{
@@ -77,5 +96,8 @@ Astro.cookies.set("csrf_token",resp.headers.get("X-CSRF-TOKEN"),sessionCookieOpt
     preloadImageFilename:'banner-2000x673',
     preloadImageExt:'.jpg',
 }}>
+    <Fragment slot="head">
+        <script type="application/ld+json" set:html={JSON.stringify(organizationalSchema)} />
+    </Fragment>
     <Homepage productIDs={productIDs || []} productObj={productMap} cartItemObj={cartItemMap}  />
 </Layout>
