--- a/src/pages/product/[name]/[id].astro
+++ b/src/pages/product/[name]/[id].astro
@@ -5,7 +5,7 @@ import type { IProduct } from '@components/catalogue-item/interfaces';
 import { httpRequestHeader, sessionCookieOption, type IMdwResponse, type IShoppingBagSidebarProp } from '@misc';
 import CollectionPointsSidebar from '@components/product-page/collection-points-sidebar';
 import { FM_CLIENT_WEBSHOP_API_URL } from 'astro:env/server'
-import { FM_IS_ONLINE, PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX, PUBLIC_FM_HEADER_CAROUSEL_OFF_COOKIE_KEY } from 'astro:env/client'
+import { FM_IS_ONLINE, PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX, PUBLIC_FM_HEADER_CAROUSEL_OFF_COOKIE_KEY, PUBLIC_FM_COMPANY_NAME_SHORT } from 'astro:env/client'
 
 interface IApiResponse {
     relatedProductIDs:string[];
@@ -71,6 +71,130 @@ if (!!productMap[id].images && !!productMap[id].images.length) {
     preloadImageFilename = productMap[id].images[0].name + '_768x768'
     preloadImageExt = productMap[id].images[0].ext
 }
+
+const href = Astro.url.href.replaceAll('http://','https://')
+const shippingInfoPagePathname = '/terms/delivery'
+const inStock = (!!productMap[id].stockQuantities && !!productMap[id].stockQuantities.length) ? !!productMap[id].stockQuantities.map(e=>e.quantity).reduce((a,b)=>a+b,0) : false
+
+const productSchema = {
+  "@context": "https://schema.org",
+  "@graph":[
+    {
+      "@type": "Product",
+      "name": productName,
+      "description": productMap[id].description.replaceAll('<p>','').replaceAll('</p>','').trim(),
+      "brand": {
+        "@type": "Brand",
+        "name": PUBLIC_FM_COMPANY_NAME_SHORT
+      },
+      "image": productMap[id].snippetImages.map(e=>PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX+e),
+      "size": "Standard",
+      "sku": id,
+      "offers": {
+        "@type": "Offer",
+        "priceCurrency": "GBP",
+        "price": (productMap[id].discountedPrice * 0.01).toFixed(2),
+        "itemCondition": "https://schema.org/NewCondition",
+        "availability": `https://schema.org/${inStock ? 'InStock' : 'OutOfStock'}`,
+        "url": href,
+        "shippingDetails": [
+          {
+            "@type": "OfferShippingDetails",
+            "shippingRate": {
+              "@type": "MonetaryAmount",
+              "value": "4.00",
+              "currency": "GBP"
+            },
+            "shippingDestination": {
+              "@type": "DefinedRegion",
+              "addressCountry": "GB"
+            },
+            "deliveryTime": {
+              "@type": "ShippingDeliveryTime",
+              "transitTime": {
+                "@type": "QuantitativeValue",
+                "minValue": 2,
+                "maxValue": 3,
+                "unitCode": "DAY"
+              },
+              "handlingTime": {
+                "@type": "QuantitativeValue",
+                "minValue": 0,
+                "maxValue": 1,
+                "unitCode": "DAY"
+              }
+            },
+            "name": "Royal Mail Tracked 48",
+            "shippingLabel": "Royal Mail Tracked 48",
+            "shippingSettingsLink": origin + shippingInfoPagePathname
+          },
+          {
+            "@type": "OfferShippingDetails",
+            "shippingRate": {
+              "@type": "MonetaryAmount",
+              "value": "5.00",
+              "currency": "GBP"
+            },
+            "shippingDestination": {
+              "@type": "DefinedRegion",
+              "addressCountry": "GB"
+            },
+            "deliveryTime": {
+              "@type": "ShippingDeliveryTime",
+              "transitTime": {
+                "@type": "QuantitativeValue",
+                "minValue": 1,
+                "maxValue": 1,
+                "unitCode": "DAY"
+              },
+              "handlingTime": {
+                "@type": "QuantitativeValue",
+                "minValue": 0,
+                "maxValue": 1,
+                "unitCode": "DAY"
+              }
+            },
+            "name": "Royal Mail Tracked 24",
+            "shippingLabel": "Royal Mail Tracked 24",
+            "shippingSettingsLink": origin + shippingInfoPagePathname
+          }
+        ],
+        "hasMerchantReturnPolicy": {
+          "@type": "MerchantReturnPolicy",
+          "applicableCountry": "GB",
+          "returnPolicyCategory": "https://schema.org/MerchantReturnFiniteReturnWindow",
+          "merchantReturnDays": 2,
+          "returnMethod": "https://schema.org/ReturnByMail",
+          "returnFees": "https://schema.org/FreeReturn",
+          "merchantReturnLink": `${origin}/terms/returns-refunds`
+        }
+      }
+    },{
+      "@type": "BreadcrumbList",
+      "@context": "https://schema.org",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": origin
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "name": "Shop",
+          "item": `${origin}/shop`
+        },
+        {
+          "@type": "ListItem",
+          "position": 3,
+          "name": productName,
+          "item": href
+        }
+      ]
+    }
+  ]
+}
 ---
 
 <Layout {...{
@@ -94,6 +218,9 @@ if (!!productMap[id].images && !!productMap[id].images.length) {
     preloadImageFilename,
     preloadImageExt,
 }}>
+    <Fragment slot="head">
+      <script type="application/ld+json" set:html={JSON.stringify(productSchema)} />
+    </Fragment>
     <Product 
         id={id} 
         productObj={productMap} 
