--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -97,7 +97,7 @@ const organizationalSchema = {
     preloadImageExt:'.jpg',
 }}>
     <Fragment slot="head">
-        <script type="application/ld+json" set:html={JSON.stringify(organizationalSchema)} />
+        <!-- <script type="application/ld+json" set:html={JSON.stringify(organizationalSchema)} /> -->
     </Fragment>
     <Homepage productIDs={productIDs || []} productObj={productMap} cartItemObj={cartItemMap}  />
 </Layout>
