--- a/src/pages/product/[name]/[id].astro
+++ b/src/pages/product/[name]/[id].astro
@@ -218,9 +218,9 @@ const productSchema = {
     preloadImageFilename,
     preloadImageExt,
 }}>
-    <Fragment slot="head">
+    <!-- <Fragment slot="head">
       <script type="application/ld+json" set:html={JSON.stringify(productSchema)} />
-    </Fragment>
+    </Fragment> -->
     <Product 
         id={id} 
         productObj={productMap} 
