--- a/src/components/layout/index.astro
+++ b/src/components/layout/index.astro
@@ -1,4 +1,5 @@
 ---
+import './styles/base.css'
 import notoSans300Woff2 from '@fontsource/noto-sans-jp/files/noto-sans-jp-latin-300-normal.woff2?url';
 import notoSans400Woff2 from '@fontsource/noto-sans-jp/files/noto-sans-jp-latin-400-normal.woff2?url';
 import notoSans600Woff2 from '@fontsource/noto-sans-jp/files/noto-sans-jp-latin-600-normal.woff2?url';
@@ -14,8 +15,8 @@ import type { IShopAddressMap, IShoppingBagSidebarProp } from '@misc';
 import LoadingOverlay from './loading-overlay.astro';
 import ErrorMsgModal from './error-msg-modal.astro';
 import CollectionPointOnQtyIncrease from './collection-point-on-qty-increase.astro'
-import { PUBLIC_FM_COMPANY_NAME_SHORT, PUBLIC_FM_COMPANY_NAME_FULL, PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX, FM_IS_ONLINE, PUBLIC_FM_ACCEPT_MEMBERSHIP } from 'astro:env/client'
-import type { IProductImages } from '@components/catalogue-item/interfaces';
+import { PUBLIC_FM_COMPANY_NAME_SHORT, PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX, FM_IS_ONLINE, PUBLIC_FM_ACCEPT_MEMBERSHIP } from 'astro:env/client'
+import SvgSets from './svg-sets.astro'
 
 interface Props {
   paymentInProcess:boolean;
@@ -31,15 +32,13 @@ interface Props {
   title:string;
   isProductPage?:boolean;
   headerCarouselTexts:string[];
-  productDescription?:string;
   metaDescription?:string;
   imageURL?:string;
-  images?:IProductImages[];
   price?:number;
-  productID?:string;
   inStock?:boolean;
   preloadImageFilename?:string;
   preloadImageExt?:string;
+  schema?:string;
 }
 
 const { 
@@ -56,15 +55,13 @@ const {
   title,
   isProductPage = false,
   headerCarouselTexts,
-  productDescription = '',
   metaDescription = '',
   imageURL = '',
-  images = [],
   price = 0,
-  productID = '',
   inStock = false,
   preloadImageFilename = '',
   preloadImageExt = '',
+  schema = '',
 } = Astro.props
 const isCheckoutPage = Astro.url.pathname === '/checkout'
 const isContactPage = Astro.url.pathname === '/contact'
@@ -77,172 +74,7 @@ if (!!shoppingBagProp){
   if (!!cartItemMap) cartHasItems = !!Object.values(cartItemMap).map(e=>e.quantity).filter(e=>!!e).length
 } else cartHasItems = hasItemsInCart
 
-const fullTitle = !!title ? title.trim() : `${PUBLIC_FM_COMPANY_NAME_SHORT} | Affordable Fashion Jewellery UK | Buy 3 For £20`
-
 const href = Astro.url.href.replaceAll('http://','https://')
-
-const origin = Astro.url.origin.replaceAll('http://','https://')
-
-const shippingInfoPagePathname = '/terms/delivery'
-
-const shippingSchema = {
-  "@context": "https://schema.org",
-  "@graph":[
-    {
-      "@type": "ShippingRateSettings",
-      "name": "Royal Mail Tracked 48",
-      "shippingLabel": "Royal Mail Tracked 48",
-      "shippingRate": {
-        "@type": "MonetaryAmount",
-        "value": "4.00",
-        "currency": "GBP"
-      },
-      "freeShippingThreshold": {
-        "@type": "MonetaryAmount",
-        "value": "20.00",
-        "currency": "GBP"
-      },
-      "shippingDestination": {
-        "@type": "DefinedRegion",
-        "addressCountry": "GB"
-      }
-    },
-    {
-      "@type": "ShippingRateSettings",
-      "name": "Royal Mail Tracked 24",
-      "shippingLabel": "Royal Mail Tracked 24",
-      "shippingRate": {
-        "@type": "MonetaryAmount",
-        "value": "5.00",
-        "currency": "GBP"
-      },
-      "shippingDestination": {
-        "@type": "DefinedRegion",
-        "addressCountry": "GB"
-      }
-    }
-  ]
-}
-
-const productSchema = isProductPage ? {
-  "@context": "https://schema.org",
-  "@graph":[
-    {
-      "@type": "Product",
-      "name": fullTitle,
-      "description": productDescription,
-      "brand": {
-        "@type": "Brand",
-        "name": PUBLIC_FM_COMPANY_NAME_SHORT
-      },
-      "image": images.map(({name,ext})=>PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX+name+ext),
-      "size": "Standard",
-      "sku": productID,
-      "offers": {
-        "@type": "Offer",
-        "priceCurrency": "GBP",
-        "price": (price * 0.01).toFixed(2),
-        "itemCondition": "https://schema.org/NewCondition",
-        "availability": `https://schema.org/${inStock ? 'InStock' : 'OutOfStock'}`,
-        "url": href,
-        "shippingDetails": [
-          {
-            "@type": "OfferShippingDetails",
-            "shippingRate": {
-              "@type": "MonetaryAmount",
-              "value": "4.00",
-              "currency": "GBP"
-            },
-            "shippingDestination": {
-              "@type": "DefinedRegion",
-              "addressCountry": "GB"
-            },
-            "deliveryTime": {
-              "@type": "ShippingDeliveryTime",
-              "transitTime": {
-                "@type": "QuantitativeValue",
-                "minValue": 2,
-                "maxValue": 3,
-                "unitCode": "DAY"
-              },
-              "handlingTime": {
-                "@type": "QuantitativeValue",
-                "minValue": 0,
-                "maxValue": 1,
-                "unitCode": "DAY"
-              }
-            },
-            "name": "Royal Mail Tracked 48",
-            "shippingLabel": "Royal Mail Tracked 48",
-            "shippingSettingsLink": origin + shippingInfoPagePathname
-          },
-          {
-            "@type": "OfferShippingDetails",
-            "shippingRate": {
-              "@type": "MonetaryAmount",
-              "value": "5.00",
-              "currency": "GBP"
-            },
-            "shippingDestination": {
-              "@type": "DefinedRegion",
-              "addressCountry": "GB"
-            },
-            "deliveryTime": {
-              "@type": "ShippingDeliveryTime",
-              "transitTime": {
-                "@type": "QuantitativeValue",
-                "minValue": 1,
-                "maxValue": 1,
-                "unitCode": "DAY"
-              },
-              "handlingTime": {
-                "@type": "QuantitativeValue",
-                "minValue": 0,
-                "maxValue": 1,
-                "unitCode": "DAY"
-              }
-            },
-            "name": "Royal Mail Tracked 24",
-            "shippingLabel": "Royal Mail Tracked 24",
-            "shippingSettingsLink": origin + shippingInfoPagePathname
-          }
-        ],
-        "hasMerchantReturnPolicy": {
-          "@type": "MerchantReturnPolicy",
-          "applicableCountry": "GB",
-          "returnPolicyCategory": "https://schema.org/MerchantReturnFiniteReturnWindow",
-          "merchantReturnDays": 2,
-          "returnMethod": "https://schema.org/ReturnByMail",
-          "returnFees": "https://schema.org/FreeReturn",
-          "merchantReturnLink": `${origin}/terms/returns-refunds`
-        }
-      }
-    },{
-      "@type": "BreadcrumbList",
-      "@context": "https://schema.org",
-      "itemListElement": [
-        {
-          "@type": "ListItem",
-          "position": 1,
-          "name": "Home",
-          "item": origin
-        },
-        {
-          "@type": "ListItem",
-          "position": 2,
-          "name": "Shop",
-          "item": `${origin}/shop`
-        },
-        {
-          "@type": "ListItem",
-          "position": 3,
-          "name": title,
-          "item": href
-        }
-      ]
-    }
-  ]
-} : {}
 
 const fontCss = `
     @font-face {
@@ -324,7 +156,7 @@ const fontCss = `
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{fullTitle}</title>
+  <title>{title}</title>
 
   <link rel="preconnect" href="https://challenges.cloudflare.com" crossorigin>
 
@@ -334,7 +166,6 @@ const fontCss = `
       <link rel="dns-prefetch" href={PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX}>
     </>}
     <link rel="preload" href={`${PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX}${preloadImageFilename}.avif`} as="image" type='image/avif' />
-    {/* <link rel="preload" href={`${PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX}${preloadImageFilename}${preloadImageExt}`} as="image" type={`image/${preloadImageExt === '.jpg' ? 'jpeg' : preloadImageExt.replaceAll('.','')}`} /> */}
   </>}
 
   <link rel="preload" as="font" type="font/woff2" href={notoSans300Woff2} crossorigin="anonymous" />
@@ -355,7 +186,7 @@ const fontCss = `
   <link rel="canonical" href={href} />
 
   {['og','twitter'].map(e=>(
-    <meta property={`${e}:title`} content={fullTitle} />
+    <meta property={`${e}:title`} content={title} />
   ))}
 
   <meta property="og:type" content={isProductPage ? 'product' : 'website'} />
@@ -381,68 +212,12 @@ const fontCss = `
     <meta property="og:image" content={imageURL} />
   </>}
 
-  {Astro.url.pathname === shippingInfoPagePathname && <script type="application/ld+json" set:html={JSON.stringify(shippingSchema)} />}
+  {!!schema && <script type="application/ld+json" set:html={schema} />}
 
   <meta name="theme-color" content="#ffffff">
 
-  <slot name="head" />
-
   <style set:html={fontCss} />
 
-  <style is:global>
-    .hide-scrollbar {
-      scrollbar-width: none;
-    }
-    .hide-scrollbar::-webkit-scrollbar {
-      width: 0;
-    }
-
-    input::-webkit-outer-spin-button,
-    input::-webkit-inner-spin-button {
-        /* display: none; <- Crashes Chrome on hover */
-        -webkit-appearance: none;
-        margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
-    }
-
-    input[type=number] {
-        -moz-appearance:textfield; /* Firefox */
-    }
-
-    #free-shipping-progress[value]::-webkit-progress-bar {
-      background-color: #ddd;
-      border-radius: 10px;
-    }
-
-    #free-shipping-progress[value]::-webkit-progress-value {
-      background-image: -webkit-linear-gradient(left, #ddd, #777, #000);
-      border-radius: 10px;
-      transition-property:width;
-      transition-duration: 300ms;
-    }
-
-    .header-carousel-span {
-      padding-left: clamp(30px, 5vw, 80px);
-    }
-
-    .header-carousel-p {
-      animation-iteration-count: infinite;
-      animation-name: header-carousel-anim;
-      animation-timing-function: linear;
-    }
-
-    .header-carousel-container:has(.header-carousel-p:hover) .header-carousel-p {
-      animation-play-state: paused;
-    }
-
-    @keyframes header-carousel-anim {
-      from {
-        transform: translateX(0%);
-      }
-      to {
-        transform: translateX(-100%);
-      }
-    }
-  </style>
   {(isContactPage || isCheckoutPage || PUBLIC_FM_ACCEPT_MEMBERSHIP === 'true') && <script src="https://challenges.cloudflare.com/turnstile/v0/api.js?onload=onloadTurnstileCallback" defer></script>}
 </head>
 <body 
@@ -455,38 +230,7 @@ const fontCss = `
   class={`${isCheckoutPage ? 'bg-gray-100' : 'bg-white'} text-gray-900 flex flex-col min-h-screen overflow-x-hidden`}
   data-member-total={total}
 >
-  <svg style="display: none;">
-    <symbol id="loading-small" viewBox="0 -960 960 960">
-      <path d="M480-80q-83.33 0-156.33-31.17-73-31.16-127.17-85.33t-85.33-127.17Q80-396.67 80-480q0-83.67 31.17-156.5 31.16-72.83 85.33-127t127.17-85.33Q396.67-880 480-880q13.67 0 23.5 9.83 9.83 9.84 9.83 23.5 0 13.67-9.83 23.5-9.83 9.84-23.5 9.84-138.33 0-235.83 97.5T146.67-480q0 138.33 97.5 235.83T480-146.67q138.33 0 235.83-97.5T813.33-480q0-13.67 9.84-23.5 9.83-9.83 23.5-9.83 13.66 0 23.5 9.83Q880-493.67 880-480q0 83.33-31.17 156.33-31.16 73-85.33 127.17t-127 85.33Q563.67-80 480-80Z" />
-    </symbol>
-    <symbol id="loading-big" viewBox="0 -960 960 960">
-      <path d="M479.76-120q-74.07 0-139.65-28.3-65.58-28.3-114.55-77.26-48.96-48.97-77.26-114.55Q120-405.69 120-479.76q0-74.96 28.42-140.45 28.43-65.48 77.16-114.21 48.73-48.73 114.59-77.16Q406.02-840 480-840q8.5 0 14.25 5.76t5.75 14.27q0 8.51-5.75 14.24T480-800q-133 0-226.5 93.5T160-480q0 133 93.5 226.5T480-160q133 0 226.5-93.5T800-480q0-8.54 5.76-14.27t14.27-5.73q8.51 0 14.24 5.75T840-480q0 73.98-28.42 139.83-28.43 65.86-77.16 114.59-48.73 48.73-114.21 77.16Q554.72-120 479.76-120Z" />
-    </symbol>
-    <symbol viewBox="0 0 100 100" stroke-linecap="round" id="user-icon-svg">
-      <circle cx="50" cy="35" r="25" />
-      <path d="
-          M 95,95
-          C 85,70,80,70,70,70
-          L 30,70
-          C 20,70,15,70,5,95
-      " />
-    </symbol>
-    <symbol id="shopping-bag-svg" viewBox="0 0 100 100" stroke="#000" stroke-linecap="round">
-      <rect x="12" y="35" width="76" height="60" rx="5" />
-      <path d="
-          M 35,45
-          L 35,20
-          C 35,5,65,5,65,20
-          L 65,45
-      " />
-    </symbol>
-    <symbol id="edit-icon" viewBox="0 -960 960 960" fill="#5f6368">
-      <path d="M212.31-140Q182-140 161-161q-21-21-21-51.31v-535.38Q140-778 161-799q21-21 51.31-21h274.08q15 0 22.5 9.42 7.5 9.43 7.5 20.58 0 11.15-7.81 20.58-7.81 9.42-22.81 9.42H212.31q-4.62 0-8.46 3.85-3.85 3.84-3.85 8.46v535.38q0 4.62 3.85 8.46 3.84 3.85 8.46 3.85h535.38q4.62 0 8.46-3.85 3.85-3.84 3.85-8.46v-276q0-15 9.42-22.5 9.43-7.5 20.58-7.5 11.15 0 20.58 7.5 9.42 7.5 9.42 22.5v276Q820-182 799-161q-21 21-51.31 21H212.31ZM480-480Zm-100 63.84v-71.22q0-14.47 5.62-27.81 5.61-13.35 15.46-23.19l341.31-341.31q9.3-9.31 20.46-13.58 11.15-4.27 22.69-4.27 11.77 0 22.61 4.27Q819-889 827.92-880.08L878.15-830q8.69 9.31 13.35 20.54 4.65 11.23 4.65 22.77t-3.96 22.38q-3.96 10.85-13.27 20.15L536.46-401.69q-9.85 9.84-23.19 15.77-13.35 5.92-27.81 5.92h-69.3q-15.47 0-25.81-10.35Q380-400.69 380-416.16Zm456.77-370.15-50.23-51.38 50.23 51.38ZM440-440h49.85l249.3-249.31-24.92-24.92-26.69-25.69L440-492.38V-440Zm274.23-274.23-26.69-25.69 26.69 25.69 24.92 24.92-24.92-24.92Z" />
-    </symbol>
-    <symbol id="shop-logo" viewBox="0 0 150.85 17.9" stroke-linecap="round" stroke-width="0.5">
-      <path d="M 89.875 13.025 L 92.875 0.15 L 99.55 0.15 L 99.55 0.625 L 98.175 0.625 L 98.175 17.175 L 99.55 17.175 L 99.55 17.65 L 91.925 17.65 L 91.925 17.175 L 93.3 17.175 L 93.3 1.55 L 93.2 1.55 L 89.45 17.65 L 86.325 17.65 L 81.925 1.475 L 81.825 1.475 L 81.825 17.175 L 83.2 17.175 L 83.2 17.65 L 79.8 17.65 L 79.8 17.175 L 81.175 17.175 L 81.175 0.625 L 79.8 0.625 L 79.8 0.15 L 86.55 0.15 L 89.875 13.025 Z M 136.925 0.7 L 136.925 0.15 L 149.925 0.15 L 150.175 5.1 L 149.725 5.1 A 16.98 16.98 0 0 0 149.128 3.807 Q 148.352 2.312 147.525 1.638 A 3.701 3.701 0 0 0 146.338 1.005 Q 145.419 0.7 144.15 0.7 L 143.275 0.7 L 143.275 8.425 L 144.125 8.425 A 2.538 2.538 0 0 0 145.999 7.645 A 3.171 3.171 0 0 0 146.1 7.538 Q 146.9 6.65 147.225 5.15 L 147.6 5.15 L 147.6 12.55 L 147.175 12.55 A 10.772 10.772 0 0 0 146.897 11.58 Q 146.568 10.618 146.122 10.058 A 2.744 2.744 0 0 0 145.962 9.875 A 2.519 2.519 0 0 0 144.585 9.14 A 3.691 3.691 0 0 0 143.875 9.075 L 143.275 9.075 L 143.275 17.1 L 144.225 17.1 A 6.391 6.391 0 0 0 146.323 16.767 A 5.582 5.582 0 0 0 148.137 15.725 A 6.965 6.965 0 0 0 150.331 12.267 A 8.378 8.378 0 0 0 150.35 12.2 L 150.85 12.2 L 150.65 17.65 L 136.925 17.65 L 136.925 17.1 L 138.4 17.1 L 138.4 0.7 L 136.925 0.7 Z M 0 0.7 L 0 0.15 L 13 0.15 L 13.25 5.35 L 12.8 5.35 Q 11.875 2.65 10.663 1.675 Q 9.45 0.7 7.05 0.7 L 6.35 0.7 L 6.35 8.825 L 7.475 8.825 Q 8.675 8.825 9.475 7.95 Q 10.188 7.171 10.503 5.876 A 7.408 7.408 0 0 0 10.575 5.55 L 10.95 5.55 L 10.95 12.95 L 10.525 12.95 A 11.094 11.094 0 0 0 10.275 11.98 Q 9.925 10.85 9.413 10.275 A 2.345 2.345 0 0 0 7.925 9.504 A 3.342 3.342 0 0 0 7.475 9.475 L 6.35 9.475 L 6.35 17.1 L 9.45 17.1 L 9.45 17.65 L 0 17.65 L 0 17.1 L 1.475 17.1 L 1.475 0.7 L 0 0.7 Z M 46.2 8.8 L 44.875 8.8 L 44.875 17.175 L 46.5 17.175 L 46.5 17.65 L 38.375 17.65 L 38.375 17.175 L 40 17.175 L 40 0.625 L 38.375 0.625 L 38.375 0.15 L 45.925 0.15 A 49.867 49.867 0 0 1 47.432 0.171 Q 48.799 0.213 49.71 0.336 A 7.899 7.899 0 0 1 50.537 0.488 Q 51.9 0.825 52.45 1.3 Q 53.501 2.154 53.632 3.89 A 6.807 6.807 0 0 1 53.65 4.4 A 6.761 6.761 0 0 1 53.568 5.492 Q 53.357 6.78 52.6 7.438 A 3.689 3.689 0 0 1 51.577 8.052 Q 51.089 8.254 50.484 8.376 A 9.267 9.267 0 0 1 49.4 8.525 L 49.4 8.6 A 8.173 8.173 0 0 1 50.429 8.803 Q 51.534 9.101 52.112 9.679 A 2.275 2.275 0 0 1 52.225 9.8 A 2.673 2.673 0 0 1 52.693 10.616 Q 53.025 11.498 53.025 12.9 L 53.025 14.225 A 19.326 19.326 0 0 0 53.033 14.788 Q 53.055 15.564 53.146 15.917 A 1.35 1.35 0 0 0 53.163 15.975 A 0.776 0.776 0 0 0 53.263 16.19 Q 53.406 16.397 53.676 16.422 A 0.826 0.826 0 0 0 53.75 16.425 A 0.779 0.779 0 0 0 54.362 16.147 A 1.105 1.105 0 0 0 54.462 16.012 A 1.548 1.548 0 0 0 54.587 15.759 Q 54.761 15.326 54.917 14.464 A 17.681 17.681 0 0 0 54.95 14.275 L 55.375 14.325 A 12.261 12.261 0 0 1 55.213 15.293 Q 55.017 16.216 54.71 16.762 A 2.08 2.08 0 0 1 54.413 17.175 Q 53.725 17.9 51.675 17.9 A 6.866 6.866 0 0 1 50.643 17.828 Q 50.115 17.748 49.699 17.577 A 2.508 2.508 0 0 1 48.763 16.937 Q 48.047 16.139 47.925 14.178 A 13.788 13.788 0 0 1 47.9 13.325 L 47.9 11.5 Q 47.9 10.299 47.633 9.649 A 1.868 1.868 0 0 0 47.537 9.45 A 1.195 1.195 0 0 0 46.78 8.872 Q 46.564 8.811 46.3 8.802 A 2.785 2.785 0 0 0 46.2 8.8 Z M 60.675 0.55 L 64.075 8.375 L 67.625 0.55 L 65.1 0.55 L 65.1 0.15 L 70.025 0.15 L 70.025 0.55 L 68.375 0.55 L 64.6 8.9 L 64.6 17.175 L 66.125 17.175 L 66.125 17.65 L 58.2 17.65 L 58.2 17.175 L 59.725 17.175 L 59.725 9.375 L 55.475 0.55 L 54.3 0.55 L 54.3 0.15 L 62.3 0.15 L 62.3 0.55 L 60.675 0.55 Z M 20.8 17.175 L 22.575 17.175 L 20.75 11.775 L 15.8 11.775 L 13.875 17.175 L 15.75 17.175 L 15.75 17.65 L 11.925 17.65 L 11.925 17.175 L 13.1 17.175 L 19.475 0 L 21.525 0 L 27.825 17.175 L 28.975 17.175 L 28.975 17.65 L 20.8 17.65 L 20.8 17.175 Z M 109.2 17.175 L 110.975 17.175 L 109.15 11.775 L 104.2 11.775 L 102.275 17.175 L 104.15 17.175 L 104.15 17.65 L 100.325 17.65 L 100.325 17.175 L 101.5 17.175 L 107.875 0 L 109.925 0 L 116.225 17.175 L 117.375 17.175 L 117.375 17.65 L 109.2 17.65 L 109.2 17.175 Z M 125.125 17.65 L 118.05 17.65 L 118.05 17.175 L 119.7 17.175 L 119.7 0.625 L 118.05 0.625 L 118.05 0.15 L 125.775 0.15 A 18.747 18.747 0 0 1 128.413 0.323 Q 129.761 0.515 130.847 0.92 A 7.432 7.432 0 0 1 132.975 2.113 Q 134.92 3.703 135.289 6.977 A 14.524 14.524 0 0 1 135.375 8.6 Q 135.375 13.75 132.475 15.775 Q 130.356 17.26 126.983 17.569 A 20.396 20.396 0 0 1 125.125 17.65 Z M 29.75 0.625 L 29.75 0.15 L 37.375 0.15 L 37.375 0.625 L 36 0.625 L 36 17.175 L 37.375 17.175 L 37.375 17.65 L 29.75 17.65 L 29.75 17.175 L 31.125 17.175 L 31.125 0.625 L 29.75 0.625 Z M 124.575 0.625 L 124.575 17.175 L 125.525 17.175 A 5.595 5.595 0 0 0 126.898 17.017 A 3.529 3.529 0 0 0 129.137 15.387 A 5.592 5.592 0 0 0 129.687 14.114 Q 130.225 12.353 130.225 9.4 L 130.225 7.95 A 22.662 22.662 0 0 0 130.129 5.776 Q 129.921 3.622 129.257 2.415 A 2.976 2.976 0 0 0 128.075 1.175 Q 127.06 0.631 125.212 0.625 A 12.676 12.676 0 0 0 125.175 0.625 L 124.575 0.625 Z M 45.7 0.625 L 44.875 0.625 L 44.875 8.325 L 45.675 8.325 A 3.669 3.669 0 0 0 46.494 8.24 Q 47.039 8.115 47.431 7.808 A 2.106 2.106 0 0 0 47.788 7.45 A 2.6 2.6 0 0 0 48.179 6.718 Q 48.433 6.012 48.469 4.955 A 10.498 10.498 0 0 0 48.475 4.6 L 48.475 3.875 Q 48.475 1.9 47.813 1.263 A 1.987 1.987 0 0 0 47.117 0.84 Q 46.811 0.726 46.43 0.672 A 5.272 5.272 0 0 0 45.7 0.625 Z M 20.55 11.225 L 18.375 4.675 L 16.025 11.225 L 20.55 11.225 Z M 108.95 11.225 L 106.775 4.675 L 104.425 11.225 L 108.95 11.225 Z" vector-effect="non-scaling-stroke" />
-    </symbol>
-  </svg>
+  <SvgSets />
   <Header {...{showUserIcon,shoppingBagProp,firstName,signedIn,headerCarouselTexts}} />
   <main class={`${isCheckoutPage ? 'bg-gray-100' : 'bg-white'} w-full ${!!headerCarouselTexts.length ? 'mt-[64px] xs:mt-[72px] md:mt-[88px]' : 'mt-[40px] xs:mt-[48px] md:mt-[64px]'}`}>
     <slot />
