--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -95,7 +95,7 @@ const organizationalSchema = {
     metaDescription:"Discover beautiful, distinctive fashion jewellery at affordable prices. Buy 3 for £20 & free UK delivery over £20. Explore our unique collection today!",
     preloadImageFilename:'banner-2000x673',
     preloadImageExt:'.jpg',
-    schema:JSON.stringify(organizationalSchema),
+    // schema:JSON.stringify(organizationalSchema),
 }}>
     <Homepage productIDs={productIDs || []} productObj={productMap} cartItemObj={cartItemMap}  />
 </Layout>
