--- a/src/components/homepage/index.astro
+++ b/src/components/homepage/index.astro
@@ -35,42 +35,16 @@ const tempImageFilename = `${PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX}banner-2000x673`
             );
         `.replaceAll('                ', '').replaceAll('        ', '').replaceAll('\n',' ').trim()}
     >
-        <div 
-            id="banner-text-wide" class="ml-auto hidden flex-col justify-center h-full [&>p>span]:align-middle"
-            style="background: linear-gradient(90deg, rgba(249,236,245,0) 0%, rgba(249,236,245,0.8) 20%, rgba(249,236,245,1) 100%);"
-        >
-            <p class="text-center font-serif">
-                <span class="font-light mr-3">Buy</span>
-                <span class="font-black mr-3">3</span>
-                <span class="font-light mr-3">For</span>
-                <span class="font-black">£20</span>
-            </p>
-            <ShopNowButton />
-        </div>
-        <div 
-            id="banner-text-mid" 
-            class="ml-auto hidden flex-col justify-center h-full [&>p>span]:align-middle"
-            style="background: linear-gradient(90deg, rgba(249,236,245,0) 0%, rgba(249,236,245,0.8) 20%, rgba(249,236,245,1) 100%);"
-        >
-            <p class="text-center font-serif">
-                <span class="font-light">Buy</span>
-                <span class="font-black">3</span>
-            </p>
-            <p class="text-center font-serif"><span class="font-light">For</span></p>
-            <p class="text-center font-serif"><span class="font-black">£20</span></p>
-            <ShopNowButton />
-        </div>
-        <div
-            id="banner-text-narrow" 
-            class="hidden flex-col justify-center h-full p-4"
-        >
-            <div class="[&>p>span]:align-middle w-fit mx-auto p-8" style="background-color: rgba(249,236,245,0.7);">
-                <p class="text-center font-serif">
+        <div id="banner-text-outer" class="flex-col justify-center h-full">
+            <div id="banner-text-inner">
+                <h1 class="text-center font-serif">
                     <span class="font-light">Buy</span>
                     <span class="font-black">3</span>
-                </p>
-                <p class="text-center font-serif"><span class="font-light">For</span></p>
-                <p class="text-center font-serif"><span class="font-black">£20</span></p>
+                    <br class="hidden" />
+                    <span class="font-light">For</span>
+                    <br class="hidden" />
+                    <span class="font-black">£20</span>
+                </h1>
                 <ShopNowButton />
             </div>
         </div>
@@ -135,20 +109,11 @@ const tempImageFilename = `${PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX}banner-2000x673`
     let resizeTimeout
     let largestW = 0, largestH = 0
     const bannerContainer = document.getElementById('banner-container') as HTMLDivElement
-    const bannerTextWideScreen = document.getElementById("banner-text-wide") as HTMLDivElement
-    const bannerTextMidScreen = document.getElementById("banner-text-mid") as HTMLDivElement
-    const bannerTextNarrowScreen = document.getElementById("banner-text-narrow") as HTMLDivElement
+    const bannerTextOuter = document.getElementById("banner-text-outer") as HTMLDivElement
+    const bannerTextInner = document.getElementById("banner-text-inner") as HTMLDivElement
+    const lineBreaks = bannerTextInner.getElementsByTagName('br')
+    const lineBreakCount = lineBreaks.length
     const header = document.getElementsByTagName('header')[0] as HTMLDivElement
-
-    const showElement = (elem:HTMLElement) => {
-        elem.classList.remove('hidden')
-        elem.classList.add('flex')
-    }
-
-    const hideElement = (elem:HTMLElement) => {
-        elem.classList.add('hidden')
-        elem.classList.remove('flex')
-    }
 
     const resizeBanner = () => {
         catalogueItemsOnResize()
@@ -192,73 +157,89 @@ const tempImageFilename = `${PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX}banner-2000x673`
         const wRate = widthForBannerText / bannerActualHeight
         if (wRate > 1.1) {
             bannerContainer.style.backgroundPositionX = null
-            showElement(bannerTextWideScreen)
-            hideElement(bannerTextMidScreen)
-            hideElement(bannerTextNarrowScreen)
+            
+            bannerTextOuter.className = 'ml-auto flex flex-col justify-center h-full'
+            bannerTextInner.className = '[&>h1>span]:align-middle'
+            bannerTextOuter.style.background = 'linear-gradient(90deg, rgba(249,236,245,0) 0%, rgba(249,236,245,0.8) 20%, rgba(249,236,245,1) 100%)'
+            bannerTextInner.style.backgroundColor = null
+
             const fontRate = Math.min(widthForBannerText * 0.0023,bannerActualHeight * 0.0055)
-            bannerTextWideScreen.style.width = `${widthForBannerText}px`
+            bannerTextOuter.style.width = `${widthForBannerText}px`
+
             const fontPoints = [1,6,1,6]
-            const spans = bannerTextWideScreen.getElementsByTagName('span')
+            const spans = bannerTextOuter.getElementsByTagName('span')
             for (let i=0; i<spans.length; i++){
                 spans.item(i).style.fontSize = `${fontPoints[i] * fontRate}rem`
             }
 
-            const shopNowBtn = bannerTextWideScreen.getElementsByClassName('shop-now-btn')[0] as HTMLDivElement
+            for (let i=0; i<lineBreakCount; i++){
+                lineBreaks.item(i).classList.add('hidden')
+            }
+
+            const shopNowBtn = bannerTextOuter.getElementsByClassName('shop-now-btn')[0] as HTMLDivElement
             if (!shopNowBtn) return
 
             shopNowBtn.classList.remove('hidden')
-            if (shopNowBtn.getBoundingClientRect().bottom > bannerTextWideScreen.getBoundingClientRect().bottom) shopNowBtn.classList.add('hidden')
+            if (shopNowBtn.getBoundingClientRect().bottom > bannerTextOuter.getBoundingClientRect().bottom) shopNowBtn.classList.add('hidden')
         } else if (actualImageWidth < innerWidth) {
             bannerContainer.style.backgroundPositionX = null
-            hideElement(bannerTextWideScreen)
-            showElement(bannerTextMidScreen)
-            hideElement(bannerTextNarrowScreen)
+
+            bannerTextOuter.className = 'ml-auto flex flex-col justify-center h-full'
+            bannerTextInner.className = '[&>h1>span]:align-middle'
+            bannerTextOuter.style.background = 'linear-gradient(90deg, rgba(249,236,245,0) 0%, rgba(249,236,245,0.8) 20%, rgba(249,236,245,1) 100%)'
+            bannerTextInner.style.backgroundColor = null
+
             widthForBannerText = Math.max(widthForBannerText, bannerActualHeight * 0.7)
-            bannerTextMidScreen.style.width = `${widthForBannerText}px`
+            bannerTextOuter.style.width = `${widthForBannerText}px`
+
             const fontRate = Math.min(widthForBannerText * 0.7,bannerActualHeight * 0.005)
             const fontPoints = [1,3,1,3]
-            const spans = bannerTextMidScreen.getElementsByTagName('span')
+            const lineHeightPoints = [3,3,1,3]
+            const spans = bannerTextOuter.getElementsByTagName('span')
             for (let i=0; i<spans.length; i++){
                 spans.item(i).style.fontSize = `${fontPoints[i] * fontRate}rem`
-            }
-            const lineHeightPoints = [3,1,3]
-            const ps = bannerTextMidScreen.getElementsByTagName('p')
-            for (let i=0; i<lineHeightPoints.length; i++){
-                ps.item(i).style.lineHeight = `${lineHeightPoints[i] * fontRate}rem`
+                spans.item(i).style.lineHeight = `${lineHeightPoints[i] * fontRate}rem`
             }
 
-            const shopNowBtn = bannerTextMidScreen.getElementsByClassName('shop-now-btn')[0] as HTMLDivElement
+            for (let i=0; i<lineBreakCount; i++){
+                lineBreaks.item(i).classList.remove('hidden')
+            }
+
+            const shopNowBtn = bannerTextOuter.getElementsByClassName('shop-now-btn')[0] as HTMLDivElement
             if (!shopNowBtn) return
 
             shopNowBtn.classList.add('pt-8')
             shopNowBtn.classList.remove('hidden')
-            if (shopNowBtn.getBoundingClientRect().bottom > bannerTextMidScreen.getBoundingClientRect().bottom) shopNowBtn.classList.add('hidden')
+            if (shopNowBtn.getBoundingClientRect().bottom > bannerTextOuter.getBoundingClientRect().bottom) shopNowBtn.classList.add('hidden')
         } else {
-            hideElement(bannerTextWideScreen)
-            hideElement(bannerTextMidScreen)
-            showElement(bannerTextNarrowScreen)
+            bannerTextOuter.className = 'flex flex-col justify-center h-full mx-auto p-4'
+            bannerTextInner.className = '[&>h1>span]:align-middle w-fit p-8 mx-auto'
+            bannerTextOuter.style.background = null
+            bannerTextInner.style.backgroundColor = 'rgba(249,236,245,0.7)'
 
             const fontRate = Math.min(innerWidth * 0.005,bannerActualHeight * 0.004)
-            bannerTextNarrowScreen.style.width = `${widthForBannerText}px`
+            bannerTextOuter.style.width = `${widthForBannerText}px`
+
             const fontPoints = [1,4,1,4]
-            const spans = bannerTextNarrowScreen.getElementsByTagName('span')
+            const lineHeightPoints = [4,4,1.2,4]
+            const spans = bannerTextOuter.getElementsByTagName('span')
             for (let i=0; i<spans.length; i++){
                 spans.item(i).style.fontSize = `${fontPoints[i] * fontRate}rem`
+                spans.item(i).style.lineHeight = `${lineHeightPoints[i] * fontRate}rem`
             }
-            const lineHeightPoints = [4,1.2,4]
-            const ps = bannerTextNarrowScreen.getElementsByTagName('p')
-            for (let i=0; i<lineHeightPoints.length; i++){
-                ps.item(i).style.lineHeight = `${lineHeightPoints[i] * fontRate}rem`
+
+            for (let i=0; i<lineBreakCount; i++){
+                lineBreaks.item(i).classList.remove('hidden')
             }
 
             bannerContainer.style.backgroundPositionX = `${(actualImageWidth - innerWidth) * -0.5}px`
 
-            const shopNowBtn = bannerTextNarrowScreen.getElementsByClassName('shop-now-btn')[0] as HTMLDivElement
+            const shopNowBtn = bannerTextOuter.getElementsByClassName('shop-now-btn')[0] as HTMLDivElement
             if (!shopNowBtn) return
 
             shopNowBtn.classList.add('pt-8')
             shopNowBtn.classList.remove('hidden')
-            if (shopNowBtn.getBoundingClientRect().bottom > bannerTextNarrowScreen.getBoundingClientRect().bottom) shopNowBtn.classList.add('hidden')
+            if (shopNowBtn.getBoundingClientRect().bottom > bannerTextOuter.getBoundingClientRect().bottom) shopNowBtn.classList.add('hidden')
         }
     }
     const onResize = () => {
