--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '../components/layout/index.astro';
-import { httpRequestHeader, sessionCookieOption, type IMdwResponse, type IShoppingBagSidebarProp } from '@misc';
+import { httpRequestHeader, httpToHttps, sessionCookieOption, type IMdwResponse, type IShoppingBagSidebarProp } from '@misc';
 import { FM_CLIENT_WEBSHOP_API_URL } from 'astro:env/server'
 import { FM_IS_ONLINE, PUBLIC_FM_HEADER_CAROUSEL_OFF_COOKIE_KEY, PUBLIC_FM_COMPANY_NAME_SHORT, PUBLIC_FM_COMPANY_NAME_FULL } from 'astro:env/client'
 import Homepage from '@components/homepage/index.astro'
@@ -61,7 +61,7 @@ const shoppingBagProp:IShoppingBagSidebarProp = {
 
 Astro.cookies.set("csrf_token",resp.headers.get("X-CSRF-TOKEN"),sessionCookieOption(isOnline))
 
-const origin = Astro.url.origin.replaceAll('http://','https://')
+const origin = httpToHttps(Astro.url.origin)
 
 const organizationalSchema = {
   "@context": "https://schema.org",
