--- a/src/pages/product/[name]/[id].astro
+++ b/src/pages/product/[name]/[id].astro
@@ -84,7 +84,7 @@ if (!!productMap[id].images && !!productMap[id].images.length) {
     title:productName,
     isProductPage:true,
     headerCarouselTexts,
-    metaDescription:!!productMap[id].metaDescription ? productMap[id].metaDescription : productMap[id].description.replaceAll('<p>','').replaceAll('</p>','').trim(),
+    metaDescription:!!productMap[id].metaDescription ? productMap[id].metaDescription : productMap[id].description,
     imageURL:PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX+productMap[id].images[0].name+productMap[id].images[0].ext,
     price:productMap[id].discountedPrice,
     inStock:(!!productMap[id].stockQuantities && !!productMap[id].stockQuantities.length) ? !!productMap[id].stockQuantities.map(e=>e.quantity).reduce((a,b)=>a+b,0) : false,
