--- a/src/components/catalogue-item-related-product/image.astro
+++ b/src/components/catalogue-item-related-product/image.astro
@@ -22,6 +22,7 @@ const isProductPage = Astro.url.pathname.startsWith('/product/')
     data-product-page-key-product={productPageKeyProduct ? '1' : '0'}
     data-index={index}
     data-len={len}
+    class="carousel-image"
 >
     <input 
         type="radio" 
