--- a/src/components/catalogue-item-related-product/product.astro
+++ b/src/components/catalogue-item-related-product/product.astro
@@ -2,8 +2,8 @@
 import { formatPrice } from '@misc'
 import Carousel from './carousel.astro'
 import ShoppingBag from '@components/layout/header/icons/shopping-bag.astro'
-import type { IProduct } from './interfaces';
 import LoadingSmall from '@components/layout/header/icons/loading-small.astro';
+import type { IProduct } from '@components/catalogue-item/interfaces';
 
 interface Props {
     id:string;
