--- a/src/components/catalogue-item-related-product/image.astro
+++ b/src/components/catalogue-item-related-product/image.astro
@@ -15,7 +15,7 @@ interface Props extends IProductImages {
 const { name, ext, id, checked, index, len, productPageKeyProduct, render, showRadio } = Astro.props as Props
 const filename = PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX + name
 const sizes = productPageKeyProduct ? '100vw' : '(min-width: 1536px) 25vw, (min-width: 640px) 33vw, 50vw'
-const isProductPage = Astro.url.pathname.startsWith('/product/')
+const isProductPage = ['earrings'].some(e=>Astro.url.pathname.startsWith(`/${e}/`))
 ---
 
 <astro-carousel-image 
