--- a/src/components/track-order/product.astro
+++ b/src/components/track-order/product.astro
@@ -10,13 +10,13 @@ interface Props {
 }
 
 
-const { product:{name: productName, images, url, id}, item:{ finalPrice, quantity } } = Astro.props as Props
+const { product:{name: productName, images, url, id, mainType}, item:{ finalPrice, quantity } } = Astro.props as Props
 const { name:imgName, ext } = images[0]
 const style = `background-image: image-set(${['.avif',ext].map(e=>`url(${PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX}${imgName}_256x256${e}) type('image/${e === '.jpg' ? 'jpeg' : e.replace('.','').toLowerCase()}')`).join(', ')})`
 ---
 
 <li>
-    <a href={`/product/${url}/${id}`} target="_blank" rel="noreferrer noopener" class="flex">
+    <a href={`/${mainType}/${url}/${id}`} target="_blank" rel="noreferrer noopener" class="flex">
             <div class="w-20 h-20 relative flex-none">
                 <div 
                     class="absolute top-0 bg-cover bg-no-repeat bg-center w-full h-full"
