--- a/src/components/checkout/empty-cart.astro
+++ b/src/components/checkout/empty-cart.astro
@@ -23,7 +23,7 @@ const acceptMembership = PUBLIC_FM_ACCEPT_MEMBERSHIP === 'true'
             <p class='tracking-widest uppercase text-xs text-center mt-2 mb-8'>Sign in to access your items already saved in your shopping bag.</p>
             <a href={signInPath} class={whiteBtnClass.replace('w-full','max-w-60 mx-auto')}>Sign In</a>
             </>}
-            {(!acceptMembership || signedIn) && <a href="/shop" class={whiteBtnClass.replace('w-full','max-w-60 text-center mx-auto')}>Go to shop</a>}
+            {(!acceptMembership || signedIn) && <a href="/collections/earrings" class={whiteBtnClass.replace('w-full','max-w-60 text-center mx-auto')}>Go to shop</a>}
         </div>
     </div>
 </div>
