--- a/src/components/homepage/index.astro
+++ b/src/components/homepage/index.astro
@@ -21,7 +21,7 @@ const tempImageFilename = `${PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX}banner-2000x673`
       }
     }
 </style>
-<a href="/shop">
+<a href="/collections/earrings">
     <div 
         id="banner-container" 
         class="w-full"
