--- a/src/components/product-page/index.astro
+++ b/src/components/product-page/index.astro
@@ -20,7 +20,7 @@ const qtyInCart = cartItemObj[id]?.quantity || 0
 
 const breadcrumbItems:ILink[] = [
     {name:"Home",url:"/"},
-    {name:"Shop",url:"/shop"},
+    {name:"Shop",url:"/collections/earrings"},
     {name:name,url:`/${mainType}/${url}/${id}`}
 ]
 ---
