--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -69,7 +69,7 @@
         <div class="container">
             <h1>Page Not Found</h1>
             <div class="link-container">
-                <a href="/shop">SHOP NOW</a>
+                <a href="/collections/earrings">SHOP NOW</a>
             </div>
             <div class="logo">
                 <svg width="130" viewBox="0 0 150.85 17.9" stroke-linecap="round" stroke-width="0.5" fill="#000" stroke="#000">
