--- a/src/components/contact/index.astro
+++ b/src/components/contact/index.astro
@@ -49,7 +49,7 @@ import Textarea from '@components/input-fields/textarea';
 <div id="submit-success" class="max-w-96 mx-auto hidden flex-col justify-center py-4 px-4">
     <h2 class="font-display text-2xl [word-spacing:0.3rem]">Message Received</h2>
     <p class="font-light mt-4">We've received your message and will get back to you shortly. In the meantime, feel free to continue exploring our beautiful collection.</p>
-    <a href="/shop" class="mt-6 cursor-pointer text-sm text-center uppercase font-serif tracking-[0.3rem] [word-spacing:0.2em] py-2 border-black border font-semibold block relative after:absolute after:w-full after:h-0 after:bottom-0 after:left-0 after:bg-black after:duration-300 mouse:hover:after:h-0.5 touchscreen:after:hidden">Continue Shopping</a>
+    <a href="/collections/earrings" class="mt-6 cursor-pointer text-sm text-center uppercase font-serif tracking-[0.3rem] [word-spacing:0.2em] py-2 border-black border font-semibold block relative after:absolute after:w-full after:h-0 after:bottom-0 after:left-0 after:bg-black after:duration-300 mouse:hover:after:h-0.5 touchscreen:after:hidden">Continue Shopping</a>
 </div>
 
 <script>
