--- a/src/pages/[producttype]/[name]/[id].astro
+++ b/src/pages/[producttype]/[name]/[id].astro
@@ -22,7 +22,7 @@ const headerCarouselOff = Astro.cookies.has(PUBLIC_FM_HEADER_CAROUSEL_OFF_COOKIE
 const resp = await fetch(`${ FM_CLIENT_WEBSHOP_API_URL }/webshop/product-page-init/${id}`,{
     headers:httpRequestHeader(true,'SSR',true,initialSessionID,Astro.clientAddress,!headerCarouselOff)
 })
-if (!resp.ok) return Astro.redirect('/shop')
+if (!resp.ok) return Astro.redirect('/collections/earrings')
 const json = await resp.json()
 let {
     mdwResponse:{
